<?xml version="1.0"?>
<package format="2">

    <name>controlit_task_library</name>
    
    <version>0.0.0</version>

    <description>
        Contains a library of tasks that can be used to configure controller objectives.
    </description>
    
    <license>LGPLv2.1</license>
    
    <url>http://ros.org/wiki/controlit_task_library</url>
  
    <maintainer email="liangfok@utexas.edu">Chien-Liang Fok</maintainer>

    <author>Chien-Liang Fok</author>
    <author>Gwendolyn Johnson</author>
    <author>J.D. Yamokoski</author>
    
    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>cmake_modules</depend>
    <depend>controlit_core</depend>
    <depend>controlit_dependency_addons</depend>
    <depend>roscpp</depend>

    <!-- <depend package="controlit_core"/> -->
    <!-- <depend package="controlit_plan_library"/> -->
    <!-- <depend package="controlit_dependency_addons"/> -->  <!-- For real-time publisher -->
  
    <export>
        <controlit_core plugin="${prefix}/task_plugins.xml" />
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lcontrolit_task_library"/>
    </export>
</package>


